--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>UX designer Wonmi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./temp/styles/styles.css" />
     <script src="main.js"></script>
 </head>
 <body>
     <header class="site-header">
-        haha
+        wonmiya
     </header>
 </body>
 </html>
