--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,37 @@
     <title>UX designer Wonmi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./temp/styles/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,900&display=swap" rel="stylesheet">
     <script src="main.js"></script>
 </head>
 <body>
     <header class="site-header">
-        wonmiya
+        <div class="container">
+            <div class="site-header__logo">
+                <div class="site-header__logo-text">wonmi</div>
+            </div>
+            <div class="site-header__menu-content">
+                <nav class="primary-nav">
+                    <ul class="primary-nav__list">
+                        <li>
+                            <a href="#">myself</a>
+                        </li>
+                        <li>
+                            <a href="#">design</a>
+                        </li>
+                        <li>
+                            <a href="#">development</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
+    <main class="site-content">
+        main area
+    </main>
+    <footer>
+        footer area
+    </footer>
 </body>
 </html>
