Changed wrapper definitino and finished static hamburger menu design

--- a/app/index.html
+++ b/app/index.html
@@ -12,23 +12,31 @@
 <body>
     <header class="site-header">
         <div class="container">
-            <div class="site-header__logo">
-                <div class="site-header__logo-text">wonmi</div>
-            </div>
-            <div class="site-header__menu-content">
-                <nav class="primary-nav">
-                    <ul class="primary-nav__list">
-                        <li>
-                            <a href="#">myself</a>
-                        </li>
-                        <li>
-                            <a href="#">design</a>
-                        </li>
-                        <li>
-                            <a href="#">development</a>
-                        </li>
-                    </ul>
-                </nav>
+            <div class="site-header__content">
+                <div class="site-header__menu-content">
+                    <nav class="primary-nav">
+                        <ul class="primary-nav__list">
+                            <li>
+                                <a href="#">myself</a>
+                            </li>
+                            <li>
+                                <a href="#">design</a>
+                            </li>
+                            <li>
+                                <a href="#">development</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="hamburger">
+                        <span class="hamburger__icon"></span>
+                    </div>
+                    <div class="overlay-nav">
+                        this is overaly nav
+                    </div>
+                </div>
+                <div class="site-header__logo">
+                    <div class="site-header__logo-text">wonmi</div>
+                </div>
             </div>
         </div>
     </header>
