Finished hamburger menu js action with animation added

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./temp/styles/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,900&display=swap" rel="stylesheet">
-    <script src="main.js"></script>
 </head>
 <body>
     <header class="site-header">
@@ -28,7 +27,7 @@
                         </ul>
                     </nav>
                     <div class="hamburger">
-                        <span class="hamburger__icon"></span>
+                        <div class="hamburger__icon"></div>
                     </div>
                     <div class="overlay-nav">
                         this is overaly nav
@@ -44,7 +43,8 @@
         main area
     </main>
     <footer>
-        footer area
+        footer are
     </footer>
+    <script src="./temp/scripts/App.js"></script>
 </body>
 </html>
