Initiated slick slider

--- a/app/index.html
+++ b/app/index.html
@@ -40,11 +40,17 @@
         </div>
     </header>
     <main class="site-content">
-        main area
+        <div class="hero">
+            <div class="hero-slider">
+                <div>your content1</div>
+                <div>your content2</div>
+                <div>your content3</div>
+            </div>
+        </div>
     </main>
     <footer>
         footer are
     </footer>
-    <script src="./temp/scripts/App.js"></script>
+<script src="./temp/scripts/App.js"></script>
 </body>
 </html>
