Finished herero sectino styling and fadeslide animation

--- a/app/index.html
+++ b/app/index.html
@@ -41,10 +41,17 @@
     </header>
     <main class="site-content">
         <div class="hero">
+            <h2 class="hero__heading">
+                <div class="container">
+                <p class="hero__heading--intro">UX/UI DESIGNER <br> WHO KEEPS LEARNING TO</p>
+                <p class="hero__heading--concept">Understand</p>
+                <p class="hero__heading--keywords">Myself, Design, Development</p>
+                </div>
+            </h2>
             <div class="hero-slider">
-                <div>your content1</div>
-                <div>your content2</div>
-                <div>your content3</div>
+                <div class="hero-slider__img hero-slider__img--01"></div>
+                <div class="hero-slider__img hero-slider__img--02"></div>
+                <div class="hero-slider__img hero-slider__img--03"></div>
             </div>
         </div>
     </main>
