Marked up and styled basic part of myself section

--- a/app/index.html
+++ b/app/index.html
@@ -43,9 +43,9 @@
         <div class="hero">
             <h2 class="hero__heading">
                 <div class="container">
-                <p class="hero__heading--intro">UX/UI DESIGNER <br> WHO KEEPS LEARNING TO</p>
-                <p class="hero__heading--concept">Understand</p>
-                <p class="hero__heading--keywords">Myself, Design, Development</p>
+                    <p class="hero__heading--intro">UX/UI DESIGNER <br> WHO KEEPS LEARNING TO</p>
+                    <p class="hero__heading--concept">UNDERSTAND</p>
+                    <p class="hero__heading--keywords">Myself, Design, Development</p>
                 </div>
             </h2>
             <div class="hero-slider">
@@ -54,6 +54,25 @@
                 <div class="hero-slider__img hero-slider__img--03"></div>
             </div>
         </div>
+        <section class="section section--myself">
+            <div class="section__container">
+                <header class="section__header">
+                    <div class="section__eyebrow">MYSELF</div>
+                    <div class="section__title">Revived as a designer.</div>
+                    <div class="section__paragraph">
+                        We work in the space where brands and technology meet. Where brands willing to create something unique and
+                        exciting
+                        can
+                        explore endless ways to connect with consumers.
+                    </div>
+                </header>
+                <div class="section__side">
+                    <div class="section__inner-container">
+                        <img src="./assets/images/hero_04.jpg" alt="myself image">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         footer are
