Finished marking up and basic styling for MYSELF section

--- a/app/index.html
+++ b/app/index.html
@@ -67,9 +67,13 @@
                     </div>
                 </header>
                 <div class="section__side">
-                    <div class="section__inner-container">
-                        <img src="./assets/images/hero_04.jpg" alt="myself image">
+                    <div class="section__side-container">
+                        <img class="img1" src="./assets/images/hero_04.jpg" alt="myself image">
+                        <img class="img2" src="./assets/images/hero_01.jpg" alt="myself image">
                     </div>
+                </div>
+                <div class="section__cta">
+                    <a href="#" class="btn btn--underline">See My Story<span></span></a>
                 </div>
             </div>
         </section>
