--- a/app/index.html
+++ b/app/index.html
@@ -41,24 +41,24 @@
     </header>
     <main class="site-content">
         <div class="hero">
-            <h2 class="hero__heading">
+            <h1 class="hero__heading">
                 <div class="container">
                     <p class="hero__heading--intro">UX/UI DESIGNER <br> WHO KEEPS LEARNING TO</p>
                     <p class="hero__heading--concept">UNDERSTAND</p>
                     <p class="hero__heading--keywords">Myself, Design, Development</p>
                 </div>
-            </h2>
+            </h1>
             <div class="hero-slider">
                 <div class="hero-slider__img hero-slider__img--01"></div>
                 <div class="hero-slider__img hero-slider__img--02"></div>
                 <div class="hero-slider__img hero-slider__img--03"></div>
             </div>
         </div>
-        <section class="section section--myself">
+        <section class="section section__myself">
             <div class="section__container">
                 <header class="section__header">
                     <div class="section__eyebrow">MYSELF</div>
-                    <div class="section__title">Revived as a designer.</div>
+                    <h2 class="section__heading">Revived as a designer.</h2>
                     <div class="section__paragraph">
                         We work in the space where brands and technology meet. Where brands willing to create something unique and
                         exciting
@@ -66,16 +66,134 @@
                         explore endless ways to connect with consumers.
                     </div>
                 </header>
-                <div class="section__side">
+                <div class="section__side section__side--left-padding">
                     <div class="section__side-container">
                         <img class="img1" src="./assets/images/hero_04.jpg" alt="myself image">
                         <img class="img2" src="./assets/images/hero_01.jpg" alt="myself image">
                     </div>
                 </div>
                 <div class="section__cta">
-                    <a href="#" class="btn btn--underline">See My Story<span></span></a>
+                    <a href="#" class="btn btn--underline">See my story<span></span></a>
                 </div>
             </div>
+        </section>
+        <section class="section section__design">
+            <div class="section__container">
+                <header class="section__header">
+                    <div class="section__eyebrow">DESIGN</div>
+                    <h2 class="section__heading">Believe in Power of UX Design.</h2>
+                    <div class="section__paragraph">
+                        We work in the space where brands and technology meet. Where brands willing to create something unique and
+                        exciting can explore endless ways to connect with consumers.
+                    </div>
+                    <div class="section__illust">
+                        <div class="illust__container is-in-view">
+                            <figure class="illust__circle illust__circle--left">Client's Needs</figure>
+                            <figure class="illust__circle illust__circle--center">Design Thinking</figure>
+                            <figure class="illust__circle illust__circle--right">Users' Needs</figure>
+                        </div>
+                    </div>
+                    <div class="section__paragraph">
+                        We work in the space where brands and technology meet. Where brands willing to create something unique and
+                        exciting can explore endless ways to connect with consumers.
+                    </div>
+                </header>
+                <div class="section__side section__side--right-padding">
+                    <div class="section__side-container">
+                        <h3 class="section__eyebrow section__eyebrow--bw1">FEATURED DESIGN WORKS</h3>
+                        <div class="cards">
+                            <a href="#" class="cards__card">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_03.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">Mobile App</p>
+                                    <h4 class="card__title">How to improve people's mindfulness?</h4>
+                                </div>
+                            </a>
+                            <a href="#" class="cards__card">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">Mobile App</p>
+                                    <h4 class="card__title">How to improve people's mindfulness?</h4>
+                                </div>
+                            </a>
+                        </div>
+                        <div href="#" class="section__cta">
+                            <a href="#" class="btn btn--underline">See all design works<span></span></a>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="section section__banner">
+            <p class="section__banner-eyebrow">If you are looking for</p>
+            <p class="section__banner-copy">
+                a designer who also understands development process?
+            </p>
+        </div>
+        <section class="section section--development">
+            <div class="section__container">
+                <header class="section__header">
+                    <div class="section__eyebrow">DEVELOPMENT</div>
+                    <h2 class="section__heading">Thanks to learning development, I've got a broader view.</h2>
+                    <div class="section__paragraph">
+                        We work in the space where brands and technology meet. Where brands willing to create something unique
+                        and
+                        exciting can explore endless ways to connect with consumers.
+                    </div>
+                    <div class="section__illust">
+                        <div class="illust__container is-in-view">
+                            <figure class="illust__circle illust__circle--big">
+                                <span class="illust__circle-inner illust__circle-inner--title1">Front-end</span>
+                                <span class="illust__circle-inner illust__circle-inner--item2">CSS</span>
+                                <span class="illust__circle-inner illust__circle-inner--item3">JS</span>
+                                <span class="illust__circle-inner illust__circle-inner--item1">HTML</span>
+                            </figure>
+                            <figure class="illust__circle illust__circle--medium">
+                                <span class="illust__circle-inner illust__circle-inner--title2">Back-end</span>
+                                <span class="illust__circle-inner illust__circle-inner--item4">Express JS</span>
+                                <span class="illust__circle-inner illust__circle-inner--item5">Mongo DB</span>
+                            </figure>                        
+                        </div>
+                    </div>
+                    <div class="section__paragraph">
+                        We work in the space where brands and technology meet. Where brands willing to create something unique
+                        and
+                        exciting can explore endless ways to connect with consumers.
+                    </div>
+                </header>
+                <div class="section__side section__side--right-padding">
+                    <div class="section__side-container">
+                        <h3 class="section__eyebrow section__eyebrow--bw1">FEATURED DEVELOPMENT WORKS</h3>
+                        <div class="cards">
+                            <a href="#" class="cards__card">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_03.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">Mobile App</p>
+                                    <h4 class="card__title">How to improve people's mindfulness?</h4>
+                                </div>
+                            </a>
+                            <a href="#" class="cards__card">
+                                <div class="card__img-container">
+                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
+                                </div>
+                                <div class="card__info">
+                                    <p class="card__meta">Mobile App</p>
+                                    <h4 class="card__title">How to improve people's mindfulness?</h4>
+                                </div>
+                            </a>
+                        </div>
+                        <div href="#" class="section__cta">
+                            <a href="#" class="btn btn--underline">See all design works<span></span></a>
+                            </a>
+                        </div>
+                    </div>
+                </div>
         </section>
     </main>
     <footer>
