--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>UX designer Wonmi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./temp/styles/styles.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="site-header">
@@ -32,7 +32,7 @@
                     <div class="overlay-nav">
                         this is overaly nav
                     </div>
-                </div>
+                </div> 
                 <div class="site-header__logo">
                     <div class="site-header__logo-text">wonmi</div>
                 </div>
@@ -196,8 +196,46 @@
                 </div>
         </section>
     </main>
-    <footer>
-        footer are
+    <footer class="site-footer"> 
+        <div class="container">
+            <div class="site-footer__content">
+                <h2 class="site-footer__title">Together, we can make <br> our users smile :)</h2>
+                <a href="#" class="site-footer__resume">open resume</a>
+                <div class="site-footer__inner-container">
+                    <div class="site-footer__site-map">
+                        <div class="site-map">
+                            <ul class="site-map__list">
+                                <p class="site-map__list-title">MYSELF</p>
+                                <li class="site-map__list-item"><a class="site-map__list-link" href="#">Path</a></li>
+                                <li class="site-map__list-item"><a class="site-map__list-link" href="#">Strengths</a></li>
+                                <li class="site-map__list-item"><a class="site-map__list-link" href="#">Goals & Interest</a></li>
+                            </ul>
+                            <ul class="site-map__list">
+                                <p class="site-map__list-title">DESIGN</p>
+                                <li class="site-map__list-item"><a class="site-map__list-link" href="#">Works</a></li>
+                                <li class="site-map__list-item"><a class="site-map__list-link" href="#">Principles</a></li>
+                            </ul>
+                            <ul class="site-map__list">
+                                <p class="site-map__list-title">DEVELOPMENT</p>
+                                <li class="site-map__list-item"><a class="site-map__list-link" href="#">Works</a></li>
+                                <li class="site-map__list-item"><a class="site-map__list-link" href="#">Insights</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="site-footer__contact">
+                        <p class="site-footer__email">wonmidesign@gmail.com</p>
+                        <p class="site-footer__status">hirable / freelancing</p>
+                        <ul class="site-footer__social">
+                            <li>Pinterest</li>
+                            <li>Twitter</li>
+                            <li>Instagram</li>
+                        </ul>
+                    </div>                </div>
+                <div class="site-footer__copyright">
+                    <p>Designed & built by Wonmi Kwon with passion and love. <br> 2019 Wonmi Kwon. All copyrights are reserved.</p>
+                </div>
+            </div>
+        </div>
     </footer>
 <script src="./temp/scripts/App.js"></script>
 </body>
