Finished footer markup and styling and added side cta for hero and footer.

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,9 @@
                     <p class="hero__heading--keywords">Myself, Design, Development</p>
                 </div>
             </h1>
+            <a href="#" class="btn--resume btn--resume--bottom-right">
+                <p>open resume</p>
+            </a>
             <div class="hero-slider">
                 <div class="hero-slider__img hero-slider__img--01"></div>
                 <div class="hero-slider__img hero-slider__img--02"></div>
@@ -199,8 +202,10 @@
     <footer class="site-footer"> 
         <div class="container">
             <div class="site-footer__content">
-                <h2 class="site-footer__title">Together, we can make <br> our users smile :)</h2>
-                <a href="#" class="site-footer__resume">open resume</a>
+                <h2 class="site-footer__title">Together, <br> we can make <br> our users smile :)</h2>
+                <a href="#" class="btn--resume btn--resume--top-right">
+                    <p>open resume</p>
+                </a>
                 <div class="site-footer__inner-container">
                     <div class="site-footer__site-map">
                         <div class="site-map">
@@ -223,13 +228,13 @@
                         </div>
                     </div>
                     <div class="site-footer__contact">
-                        <p class="site-footer__email">wonmidesign@gmail.com</p>
-                        <p class="site-footer__status">hirable / freelancing</p>
-                        <ul class="site-footer__social">
+                        <p class="site-footer__contact-email">wonmidesign@gmail.com</p>
+                        <p class="site-footer__contact-status">hirable / freelancing</p>
+                        <!-- <ul class="site-footer__contact-social">
                             <li>Pinterest</li>
                             <li>Twitter</li>
                             <li>Instagram</li>
-                        </ul>
+                        </ul> -->
                     </div>                </div>
                 <div class="site-footer__copyright">
                     <p>Designed & built by Wonmi Kwon with passion and love. <br> 2019 Wonmi Kwon. All copyrights are reserved.</p>
