--- a/app/realindex.html
+++ b/app/realindex.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>UX designer Wonmi Kwon</title>
+    <title>UX designer Wonmi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./temp/styles/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header class="site-header">
         <div class="container">
@@ -34,7 +32,7 @@
                     <div class="overlay-nav">
                         this is overaly nav
                     </div>
-                </div>
+                </div> 
                 <div class="site-header__logo">
                     <div class="site-header__logo-text">wonmi</div>
                 </div>
@@ -42,36 +40,30 @@
         </div>
     </header>
     <main class="site-content">
-        <div class="hero hero--subpage">
+        <div class="hero">
             <h1 class="hero__heading">
                 <div class="container">
-                    <p class="hero__heading--intro">MYSELF</p>
-                    <p class="hero__heading--main">Hello, I'm Wonmi Kwon.</p>
-                    <p class="hero__heading--sub">Let me tell you my story.</p>
+                    <p class="hero__heading--intro">UX/UI DESIGNER <br> WHO KEEPS LEARNING TO</p>
+                    <p class="hero__heading--concept">UNDERSTAND</p>
+                    <p class="hero__heading--keywords">Myself, Design, Development</p>
                 </div>
             </h1>
+            <a href="#" class="btn--resume btn--resume--bottom-right">
+                <p>open resume</p>
+            </a>
+            <div class="hero-slider">
+                <div class="hero-slider__img hero-slider__img--01"></div>
+                <div class="hero-slider__img hero-slider__img--02"></div>
+                <div class="hero-slider__img hero-slider__img--03"></div>
+            </div>
         </div>
-        <nav class="secondary-nav">
-            <ul class="secondary-nav__list">
-                <li class="secondary-nav__item">
-                    <a href="#myself-paths" id="myself-paths-link" class="secondary-nav__link">PATHS</a>
-                </li>
-                <li class="secondary-nav__item">
-                    <a href="#myself-skills" id="myself-skills-link" class="secondary-nav__link">SKILLS</a>
-                </li>
-                <li class="secondary-nav__item">
-                    <a href="#myself-goals" id="myself-goals-link" class="secondary-nav__link">GOALS</a>
-                </li>
-            </ul>
-        </nav>
-
-        <section id="myself-paths" class="myself-section section section__myself " data-matching-link="#myself-paths-link">
+        <section class="section section__myself">
             <div class="section__container">
                 <header class="section__header">
+                    <div class="section__eyebrow">MYSELF</div>
                     <h2 class="section__heading">Revived as a designer.</h2>
                     <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
+                        We work in the space where brands and technology meet. Where brands willing to create something unique and
                         exciting
                         can
                         explore endless ways to connect with consumers.
@@ -88,13 +80,13 @@
                 </div>
             </div>
         </section>
-        <section id="myself-skills" class="myself-section section section__design" data-matching-link="#myself-skills-link">
+        <section class="section section__design">
             <div class="section__container">
                 <header class="section__header">
+                    <div class="section__eyebrow">DESIGN</div>
                     <h2 class="section__heading">Believe in Power of UX Design.</h2>
                     <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
+                        We work in the space where brands and technology meet. Where brands willing to create something unique and
                         exciting can explore endless ways to connect with consumers.
                     </div>
                     <div class="section__illust">
@@ -105,8 +97,7 @@
                         </div>
                     </div>
                     <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
+                        We work in the space where brands and technology meet. Where brands willing to create something unique and
                         exciting can explore endless ways to connect with consumers.
                     </div>
                 </header>
@@ -135,18 +126,24 @@
                         </div>
                         <div href="#" class="section__cta">
                             <a href="#" class="btn btn--underline">See all design works<span></span></a>
-                            </a>
-                        </div>
+                        </a>
                     </div>
                 </div>
+            </div>
         </section>
-        <section id="myself-goals" class="myself-section section section--development" data-matching-link="#myself-goals-link">
+        <div class="section section__banner">
+            <p class="section__banner-eyebrow">If you are looking for</p>
+            <p class="section__banner-copy">
+                a designer who also understands development process?
+            </p>
+        </div>
+        <section class="section section--development">
             <div class="section__container">
                 <header class="section__header">
+                    <div class="section__eyebrow">DEVELOPMENT</div>
                     <h2 class="section__heading">Thanks to learning development, I've got a broader view.</h2>
                     <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique
+                        We work in the space where brands and technology meet. Where brands willing to create something unique
                         and
                         exciting can explore endless ways to connect with consumers.
                     </div>
@@ -162,12 +159,11 @@
                                 <span class="illust__circle-inner illust__circle-inner--title2">Back-end</span>
                                 <span class="illust__circle-inner illust__circle-inner--item4">Express JS</span>
                                 <span class="illust__circle-inner illust__circle-inner--item5">Mongo DB</span>
-                            </figure>
+                            </figure>                        
                         </div>
                     </div>
                     <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique
+                        We work in the space where brands and technology meet. Where brands willing to create something unique
                         and
                         exciting can explore endless ways to connect with consumers.
                     </div>
@@ -203,7 +199,7 @@
                 </div>
         </section>
     </main>
-    <footer class="site-footer">
+    <footer class="site-footer"> 
         <div class="container">
             <div class="site-footer__content">
                 <h2 class="site-footer__title">Together, <br> we can make <br> our users smile :)</h2>
@@ -217,8 +213,7 @@
                                 <p class="site-map__list-title">MYSELF</p>
                                 <li class="site-map__list-item"><a class="site-map__list-link" href="#">Path</a></li>
                                 <li class="site-map__list-item"><a class="site-map__list-link" href="#">Strengths</a></li>
-                                <li class="site-map__list-item"><a class="site-map__list-link" href="#">Goals &
-                                        Interest</a></li>
+                                <li class="site-map__list-item"><a class="site-map__list-link" href="#">Goals & Interest</a></li>
                             </ul>
                             <ul class="site-map__list">
                                 <p class="site-map__list-title">DESIGN</p>
@@ -240,16 +235,13 @@
                             <li>Twitter</li>
                             <li>Instagram</li>
                         </ul> -->
-                    </div>
-                </div>
+                    </div>                </div>
                 <div class="site-footer__copyright">
-                    <p>Designed & built by Wonmi Kwon with passion and love. <br> 2019 Wonmi Kwon. All copyrights are
-                        reserved.</p>
+                    <p>Designed & built by Wonmi Kwon with passion and love. <br> 2019 Wonmi Kwon. All copyrights are reserved.</p>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="./temp/scripts/App.js"></script>
+<script src="./temp/scripts/App.js"></script>
 </body>
-
 </html>
