Finished on-scroll dynamic header in accordance with secondary navigation(dynamic header burger nav inactive for now)

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,37 @@
 </head>
 
 <body>
-    <header class="site-header">
+    <header class="site-header site-header--standard">
+        <div class="container">
+            <div class="site-header__content">
+                <div class="site-header__menu-content">
+                    <nav class="primary-nav">
+                        <ul class="primary-nav__list">
+                            <li>
+                                <a href="#">myself</a>
+                            </li>
+                            <li>
+                                <a href="#">design</a>
+                            </li>
+                            <li>
+                                <a href="#">development</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="hamburger">
+                        <div class="hamburger__icon"></div>
+                    </div>
+                    <div class="overlay-nav">
+                        this is overaly nav
+                    </div>
+                </div>
+                <div class="site-header__logo">
+                    <div class="site-header__logo-text">wonmi</div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <header class="site-header site-header--dynamic">
         <div class="container">
             <div class="site-header__content">
                 <div class="site-header__menu-content">
