--- a/app/myself.html
+++ b/app/myself.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Design || UX designer Wonmi Kwon</title>
+    <title>UX designer Wonmi Kwon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./temp/styles/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 </head>
 
-<body class="page-myself">
+<body>
     <header class="site-header site-header--standard">
         <div class="container">
             <div class="site-header__content">
@@ -75,8 +75,8 @@
         <div class="hero hero--subpage">
             <h1 class="hero__heading">
                 <div class="container">
-                    <p class="hero__heading--intro">DESIGN</p>
-                    <p class="hero__heading--main">Focused on user experience</p>
+                    <p class="hero__heading--intro">MYSELF</p>
+                    <p class="hero__heading--main">Hello, I'm Wonmi Kwon.</p>
                     <p class="hero__heading--sub">Let me tell you my story.</p>
                 </div>
             </h1>
@@ -85,13 +85,13 @@
             <div class="secondary-nav-container">
                 <ul class="secondary-nav__list">
                     <li class="secondary-nav__item">
-                        <a href="#myself-paths" id="myself-paths-link" class="secondary-nav__link">Agency</a>
+                        <a href="#myself-paths" id="myself-paths-link" class="secondary-nav__link">PATHS</a>
                     </li>
                     <li class="secondary-nav__item">
-                        <a href="#myself-skills" id="myself-skills-link" class="secondary-nav__link">Academy</a>
+                        <a href="#myself-skills" id="myself-skills-link" class="secondary-nav__link">SKILLS</a>
                     </li>
                     <li class="secondary-nav__item">
-                        <a href="#myself-goals" id="myself-goals-link" class="secondary-nav__link">Freelance</a>
+                        <a href="#myself-goals" id="myself-goals-link" class="secondary-nav__link">GOALS</a>
                     </li>
                 </ul>
             </div>
