Fixed hamburger menu and Finished basic structure of hero of portfolio single page.

--- a/app/design.html
+++ b/app/design.html
@@ -4,28 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Design Portfolio || UX designer Wonmi Kwon</title>
+    <title>Design || UX designer Wonmi Kwon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./temp/styles/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 </head>
 
-<body class="page-work1">
-    <div class="overlay-nav">
-        <div class="container container--overlay">
-            <div class="overlay-nav__close-icon icon__close">
-                <div class="icon__close--center"></div>
-            </div>
-            this is overaly nav
-        </div>
-
-    </div>
-    <header class="site-header site-header--standard site-header--no-bg">
+<body class="page-myself">
+    <header class="site-header site-header--standard">
         <div class="container">
             <div class="site-header__content">
-                <div class="site-header__logo">
-                    <div class="site-header__logo-text">wonmi</div>
-                </div>
                 <div class="site-header__menu-content">
                     <nav class="primary-nav">
                         <ul class="primary-nav__list">
@@ -41,18 +29,21 @@
                         </ul>
                     </nav>
                     <div class="hamburger">
-                        <div class="hamburger--center"></div>
+                        <div class="hamburger__icon"></div>
                     </div>
+                    <div class="overlay-nav">
+                        this is overaly nav
+                    </div>
+                </div>
+                <div class="site-header__logo">
+                    <div class="site-header__logo-text">wonmi</div>
                 </div>
             </div>
         </div>
     </header>
     <header class="site-header site-header--dynamic">
-        <div class="container container--dynamic-header">
+        <div class="container">
             <div class="site-header__content site-header__content--dynamic">
-                <div class="site-header__logo">
-                    <div class="site-header__logo-text site-header__logo-text--black">wonmi</div>
-                </div>                
                 <div class="site-header__menu-content">
                     <nav class="primary-nav">
                         <ul class="primary-nav__list">
@@ -67,18 +58,21 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="hamburger hamburger--black">
-                        <div class="hamburger--center"></div>
+                    <div class="hamburger">
+                        <div class="hamburger__icon"></div>
                     </div>
-                    <!-- <div class="overlay-nav">
+                    <div class="overlay-nav">
                         this is overaly nav
-                    </div> -->
+                    </div>
+                </div>
+                <div class="site-header__logo">
+                    <div class="site-header__logo-text">wonmi</div>
                 </div>
             </div>
         </div>
     </header>
     <main class="site-content">
-        <div class="hero">
+        <div class="hero hero--subpage">
             <h1 class="hero__heading">
                 <div class="container">
                     <p class="hero__heading--intro">DESIGN</p>
@@ -87,9 +81,8 @@
                 </div>
             </h1>
         </div>
-        <!-- No secondary nav for each portfolio work -->
         <nav class="secondary-nav">
-            <!-- <div class="secondary-nav-container">
+            <div class="secondary-nav-container">
                 <ul class="secondary-nav__list">
                     <li class="secondary-nav__item">
                         <a href="#myself-paths" id="myself-paths-link" class="secondary-nav__link">AGENCY</a>
@@ -101,7 +94,7 @@
                         <a href="#myself-goals" id="myself-goals-link" class="secondary-nav__link">FREELANCE</a>
                     </li>
                 </ul>
-            </div> -->
+            </div>
         </nav>
         <section id="myself-paths" class="myself-section section section__myself " data-matching-link="#myself-paths-link">
             <div class="section__container">
@@ -109,7 +102,7 @@
                     <h2 class="section__heading">Learning from Professionals.</h2>
                     <div class="section__paragraph">
                         We work in the space where brands and technology meet. Where brands willing to create something
-                        unique
+                        unique 
                     </div>
                 </header>
                 <div class="section__side section__side--right-padding">
@@ -141,7 +134,7 @@
                                     <p class="card__meta">WEBSITE</p>
                                     <h3 class="card__title">Reimagine Music Corporation Site</h4>
                                 </div>
-                            </a>
+                            </a>                        
                         </div>
                     </div>
                 </div>
@@ -206,7 +199,7 @@
                                     <p class="card__meta">WEBSITE</p>
                                     <h3 class="card__title">Reimagine Music Corporation Site</h4>
                                 </div>
-                            </a>
+                            </a>                        
                         </div>
                     </div>
                 </div>
