--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
     </header>
-    <header class="site-header site-header--dynamic">
+    <div class="site-header site-header--dynamic">
         <div class="container container--dynamic-header">
             <div class="site-header__content site-header__content--dynamic">
                 <div class="site-header__logo">
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </div>
-    </header>
+    </div>
     <main class="site-content">
         <div class="hero">
             <h1 class="hero__heading">
@@ -86,24 +86,12 @@
                     <p class="hero__heading--sub">Let me tell you my story.</p>
                 </div>
             </h1>
+            <a href="#" class="btn--edge btn--edge--bottom-right btn--edge--f-bw">
+                <p>quick view</p>
+            </a>
         </div>
         <!-- No secondary nav for each portfolio work -->
-        <nav class="secondary-nav">
-            <!-- <div class="secondary-nav-container">
-                <ul class="secondary-nav__list">
-                    <li class="secondary-nav__item">
-                        <a href="#myself-paths" id="myself-paths-link" class="secondary-nav__link">AGENCY</a>
-                    </li>
-                    <li class="secondary-nav__item">
-                        <a href="#myself-skills" id="myself-skills-link" class="secondary-nav__link">ACADEMY</a>
-                    </li>
-                    <li class="secondary-nav__item">
-                        <a href="#myself-goals" id="myself-goals-link" class="secondary-nav__link">FREELANCE</a>
-                    </li>
-                </ul>
-            </div> -->
-        </nav>
-        <section id="myself-paths" class="myself-section section section__myself " data-matching-link="#myself-paths-link">
+        <section id="project-intro" class="section section__myself" >
             <div class="section__container">
                 <header class="section__header">
                     <h2 class="section__heading">Learning from Professionals.</h2>
@@ -147,7 +135,7 @@
                 </div>
             </div>
         </section>
-        <section id="myself-skills" class="myself-section section section__academy" data-matching-link="#myself-skills-link">
+        <section id="project-process" class="section section__academy">
             <div class="section__container">
                 <header class="section__header">
                     <h2 class="section__heading">Learning from Professionals.</h2>
@@ -212,7 +200,7 @@
                 </div>
             </div>
         </section>
-        <section id="myself-goals" class="myself-section section" data-matching-link="#myself-goals-link">
+        <section id="project-reflection" class="section">
             <div class="section__container">
                 <header class="section__header">
                     <h2 class="section__heading">Learning from Professionals.</h2>
@@ -264,7 +252,7 @@
         <div class="container">
             <div class="site-footer__content">
                 <h2 class="site-footer__title">Together, <br> we can make <br> our users smile :)</h2>
-                <a href="#" class="btn--resume btn--resume--top-right">
+                <a href="#" class="btn--edge btn--edge--top-right">
                     <p>open resume</p>
                 </a>
                 <div class="site-footer__inner-container">
