Finished subsection2 for project MINE

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 </head>
 
-<body class="page-work1">
+<body class="page-work page-work--1">
     <div class="overlay-nav">
         <div class="container container--overlay">
             <div class="overlay-nav__close-icon icon__close">
@@ -18,7 +18,6 @@
             </div>
             this is overaly nav
         </div>
-
     </div>
     <header class="site-header site-header--standard site-header--no-bg">
         <div class="container">
@@ -91,116 +90,118 @@
             </a>
         </div>
         <!-- No secondary nav for each portfolio work -->
-        <section id="project-intro" class="section section__myself" >
-            <div class="section__container">
-                <header class="section__header">
-                    <h2 class="section__heading">Learning from Professionals.</h2>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique
+        <!-- [a] Intro Starts -->
+        <section class="project-section section" >
+            <div class="section__container--full">
+                <div class="row row__border row__mtb">
+                    <div class="project__meta col--m-6">
+                        <h2 class="project__title">MINE</h2>
+                        <dl>
+                            <dt>Industry</dt>
+                            <dd>health </dd>
+                            <dt>Made in</dt>
+                            <dd>Oct 2017</dd>
+                            <dt>Range of engagement</dt>
+                            <dd>Market Research (team)</dd>
+                            <dd>Content development (team)</dd>
+                            <dd>Wireframing</dd>
+                            <dd>Visual strategy</dd>
+                            <dd>UI design</dd>
+                        </dl>
                     </div>
-                </header>
-                <div class="section__side section__side--right-padding">
-                    <div class="section__side-container">
-                        <div class="cards">
-                            <a href="#" class="cards__card card">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_03.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">MOBILE APP</p>
-                                    <h3 class="card__title">How to improve people's mindfulness?</h4>
-                                </div>
-                            </a>
-                            <a href="#" class="cards__card card">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">WEBSITE</p>
-                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
-                                </div>
-                            </a>
-                            <a href="#" class="cards__card card card__last">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">WEBSITE</p>
-                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
-                                </div>
-                            </a>
-                        </div>
+                    <div class="project__overview col--m-6 col--mt-until-medium">
+                        <p class="p--desc p--desc--mb">MINE is a fictious mobile application designed to enhance mindfulness of people who are exposed to the stressful
+                        environment in modern Korean society.</p>
+                        <p class="p--desc">a fictious mobile application designed to enhance mindfulness of people who are exposed to
+                            the stressful
+                            environment in modern Korean society.</p>                    
+                    </div>
+                </div>
+                <div class="row row__border row__mtb">
+                    <div class="project__meta col--m-6">
+                        <h2 class="project__subtitle">Start of Project</h2>
+                    </div>
+                    <div class="project__overview col--m-6 col--mt-until-medium">
+                        <p class="p--desc">MINE is a fictious mobile application designed to enhance mindfulness of people who are
+                            exposed</p>
+                    </div>
+                </div>
+                <div class="row row__mtb">
+                    <div class="project__meta col--m-6">
+                        <h2 class="project__subtitle">Challenge</h2>
+                    </div>
+                    <div class="project__overview col--m-6 col--mt-until-medium">
+                        <p class="p--desc">MINE is a fictious mobile application designed to enhance mindfulness of people who are
+                            exposed</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="project-process" class="section section__academy">
-            <div class="section__container">
-                <header class="section__header">
-                    <h2 class="section__heading">Learning from Professionals.</h2>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
-                        exciting
-                        can
-                        explore endless ways to connect with consumers.
-                    </div>
+        <!-- Full image -->
+        <section class="project-section project-section--full-image">
+        </section>
+        <!-- [b] Process Starts -->
+        <section class="project-section section">
+            <!-- (1) research-->
+            <section class="section section__container--full no-mt">
+                <header class="row project__subtitle--ac">
+                    <span class="project__subtitle project__subtitle--number">01</span>
+                    <h2 class="project__subtitle">Iterative research and discussion</h2>
                 </header>
-                <div class="section__side section__side--right-padding">
-                    <div class="section__side-container">
-                        <div class="cards">
-                            <a href="#" class="cards__card card">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_03.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">MOBILE APP</p>
-                                    <h3 class="card__title">How to improve people's mindfulness?</h4>
-                                </div>
-                            </a>
-                            <a href="#" class="cards__card card">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">WEBSITE</p>
-                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
-                                </div>
-                            </a>
-                            <a href="#" class="cards__card card">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">WEBSITE</p>
-                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
-                                </div>
-                            </a>
-                            <a href="#" class="cards__card card">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">WEBSITE</p>
-                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
-                                </div>
-                            </a>
-                            <a href="#" class="cards__card card card__last">
-                                <div class="card__img-container">
-                                    <img src="./assets/images/hero_02.jpg" alt="design work" class="card__img">
-                                </div>
-                                <div class="card__info">
-                                    <p class="card__meta">WEBSITE</p>
-                                    <h3 class="card__title">Reimagine Music Corporation Site</h4>
-                                </div>
-                            </a>
+                <div class="row row--gutters">
+                    <div class="col--m-6">
+                        <p class="p--desc p--desc--mb">We went through 3 iterations to decide what kind of product to develop. This process included
+                            brainstorming, market &
+                            trend research, dicussion, user interview, and client(imaginary) & I analyzed google trend, news, forums, portal
+                            keyword results. user presentation.</p>                        
+                        <img src="./assets/images/hero_02.jpg" alt="project research" class="project__img--half">
+                    </div>
+                    <div class="col--m-6 project__col--flip-order">
+                        <p class="p--desc p--desc--mb p--desc--mt project__img--desc">We went through 3 iterations to decide what kind of product to develop. This process
+                            included</p>
+                        <img src="./assets/images/hero_03.jpg" alt="project research" class="project__img--half">
+                    </div>
+                </div>
+            </section>
+            <!-- (2) goal setting-->
+            <section class="section section__container--full">
+                <header class="row project__subtitle--ac">
+                    <span class="project__subtitle project__subtitle--number">02</span>
+                    <h2 class="project__subtitle">Setting up the Project Goal through discussion</h2>
+                </header>
+                <div class="row row--gutters project__box">
+                    <div class="col--m-4">
+                        <div class="border--light p-20 mini-box-container">
+                            <h3 class="p--desc mb-20">Technology Research</h3>
+                            <p class="p--desc--small">
+                                AI and chatbot possible personalized service Location based Service and
+                                O2O service Health detecting Mobile device
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col--m-4">
+                        <div class="border--light p-20 mini-box-container">
+                            <h3 class="p--desc mb-20">Competative Research</h3>
+                            <p class="p--desc--small">
+                                AI and chatbot possible personalized service Location based Service and
+                                O2O service Health detecting Mobile device
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col--m-4">
+                        <div class="p-20 bg--light mini-box-container">
+                            <h3 class="p--desc mb-20">Goal</h3>
+                            <p class="p--desc--small">
+                                AI and chatbot possible personalized service Location based Service and
+                                O2O service Health detecting Mobile device
+                            </p>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </section>
-        <section id="project-reflection" class="section">
+        <!-- [c] Ending Starts -->
+        <section id="project-reflection" class="project-section section">
             <div class="section__container">
                 <header class="section__header">
                     <h2 class="section__heading">Learning from Professionals.</h2>
